# backend/src/controllers/courseController.ts
@@ -78,7 +78,7 @@ export class CourseController {
         total: count,
         page,
         limit,
-        totalPages: Math.ceil(count / limit),
+        total_pages: Math.ceil(count / limit),
       },
     });
   }
